RadTest Dev/src/objects/Visit__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <label>Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hospital__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hospital</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Hospital__c.Hospital_Type__c</field>
                <operation>notEqual</operation>
                <value>Dental hospital, General Hospital</value>
            </filterItems>
            <infoMessage>Enter the values only from the lookup window</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Hospital__c</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Team</label>
        <referenceTo>Sales_Team__c</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visit_Date__c</fullName>
        <label>Visit Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>doctor_phone__c</fullName>
        <label>doctor phone</label>
        <type>Phone</type>
    </fields>
    <label>Visit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Visit-{0000}</displayFormat>
        <label>Visit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>